# audaspace

./: CMakeLists.txt  build_wheel.py  pyproject.toml  scikit_build_config.cmake  simple_test.py  test_audaspace.py  test_audaspace_final.py  test_wheel.py
.github/workflows/: build-wheels.yml  build_wheels.yml  wheels.yml
bindings/python/: setup.py.in
cmake/: FindFFMPEG.cmake  FindFFTW.cmake  FindJack.cmake  FindLibSndFile.cmake  FindNumPy.cmake
tests/: simple_test.py
