[build-system]
requires = ["scikit-build-core>=0.3.3", "setuptools_scm", "numpy>=1.21"]
build-backend = "scikit_build_core.build"

[project]
name = "audaspace"
description = "Audaspace is a high level audio library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jörg Müller", email = "nexyon@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "wheel",
]

[tool.scikit-build]
cmake.build-type = "Release"
build.verbose = true
sdist.exclude = [".gitignore", "*.pyc", "__pycache__/", ".git/", "build/"]

[tool.scikit-build.wheel]
expand-macos-universal-tags = true
py-api = "py3"
packages = ["aud"]


[tool.scikit-build.cmake.define]
AUDASPACE_STANDALONE = "ON"
WITH_PYTHON = "ON"
WITH_PYTHON_MODULE = "ON"
SHARED_LIBRARY = "ON"
WITH_C = "ON"
WITH_FFMPEG = "ON"
WITH_FFTW = "ON"
WITH_JACK = "ON"
WITH_LIBSNDFILE = "ON"
WITH_OPENAL = "ON"
WITH_RUBBERBAND = "ON"
WITH_SDL = "ON"
WITH_PULSEAUDIO = "ON"
WITH_PIPEWIRE = "ON"
WITH_COREAUDIO = "ON"
WITH_WASAPI = "ON"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y epel-release",
    "yum install -y https://download1.rpmfusion.org/free/el/rpmfusion-free-release-$(rpm -E %rhel).noarch.rpm || true",
    "yum install -y ffmpeg-devel fftw-devel libsndfile-devel openal-soft-devel SDL2-devel alsa-lib-devel pulseaudio-libs-devel jack-audio-connection-kit-devel pkgconfig python3-devel git cmake3 make gcc-c++ python3-pip",
    "pip3 install meson ninja",
    "git clone https://github.com/breakfastquay/rubberband.git /tmp/rubberband",
    "cd /tmp/rubberband && git checkout v3.3.0 && meson setup build --prefix=/usr && meson compile -C build && meson install -C build",
    "pip install numpy",
]
[tool.cibuildwheel.linux.environment]
PKG_CONFIG_PATH = "/usr/lib64/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig"
CMAKE_PREFIX_PATH = "/usr:/usr/local"

[tool.cibuildwheel.macos]
before-all = [
    "brew install ffmpeg fftw libsamplerate libsndfile openal-soft sdl2 rubberband jack || true",
    "pip install numpy",
]
[tool.cibuildwheel.macos.environment]
PKG_CONFIG_PATH = "/opt/homebrew/lib/pkgconfig:/usr/local/lib/pkgconfig"
CMAKE_PREFIX_PATH = "/opt/homebrew:/usr/local"
[tool.cibuildwheel.macos.cmake.define]
WITH_WASAPI = "OFF"
WITH_PULSEAUDIO = "OFF"
WITH_PIPEWIRE = "OFF"


[tool.cibuildwheel.windows]
before-all = [
    "vcpkg install fftw3 libsamplerate libsndfile openal-soft sdl2 rubberband"
]
[tool.cibuildwheel.windows.environment]
CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake"

